feat(evaluation-training): add employee training flow, evaluation policy/workflow, and related views